--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </div>
     </div>
-    <footer class="text-center text-gray-500 dark:text-gray-400 text-sm py-8">©2025 By Phan Vinh. All Right Reserved</footer>
+    <footer class="text-center text-gray-500 dark:text-gray-400 text-sm py-8">©2025 By Phan Vinh. All Rights Reserved</footer>
     <div id="stats-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50 hidden">
         <div id="stats-modal-content" class="bg-white dark:bg-gray-800 rounded-lg shadow-xl w-full max-w-md p-6">
             <div class="flex justify-between items-center mb-4">
