--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <!-- Responsive form: stacks on small screens -->
             <form id="todo-form" class="flex flex-col sm:flex-row items-center gap-4 mb-4">
                 <div class="relative flex-grow w-full">
-                     <input type="text" id="todo-input" placeholder="Thêm công việc hoặc ý tưởng lớn..." class="w-full p-4 pr-12 text-base border-2 border-[var(--color-stroke)] rounded-lg focus:outline-none focus:ring-2 focus:border-transparent transition duration-200" style="background-color: var(--color-bg); color: var(--color-text-primary); --tw-ring-color: var(--color-accent);">
+                     <input type="text" id="todo-input" placeholder="Thêm công việc hoặc ý tưởng..." class="w-full p-4 pr-12 text-base border-2 border-[var(--color-stroke)] rounded-lg focus:outline-none focus:ring-2 focus:border-transparent transition duration-200" style="background-color: var(--color-bg); color: var(--color-text-primary); --tw-ring-color: var(--color-accent);">
                      <button type="button" id="gemini-btn" class="absolute right-3 top-1/2 -translate-y-1/2 p-2 rounded-full hover:bg-black/10 transition-colors" style="color: var(--color-text-secondary);" title="Chia nhỏ công việc bằng AI">
                         <svg id="gemini-icon" class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 3L9.5 8.5L4 11L9.5 13.5L12 19L14.5 13.5L20 11L14.5 8.5L12 3zM20 3L18.5 6L16 7L18.5 8L20 11L21.5 8L24 7L21.5 6L20 3zM5 16L4 18L2 18.5L4 19L5 21L6 19L8 18.5L6 18L5 16z"/></svg>
                         <svg id="gemini-spinner" class="spinner w-5 h-5 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
@@ -141,7 +141,7 @@
                 <p class="text-sm" style="color: var(--color-text-secondary)">Hãy thêm một công việc mới để bắt đầu.</p>
             </div>
         </main>
-        <footer class="text-center text-sm py-8" style="color: var(--color-text-secondary)">©2025 By Phan Vinh. All Right Reserved</footer>
+        <footer class="text-center text-sm py-8" style="color: var(--color-text-secondary)">©2025 By PhanVinh2k6. All Right Reserved</footer>
     </div>
     
     <!-- Stats Modal -->
