--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <p class="text-sm" style="color: var(--color-text-secondary)">Hãy thêm một công việc mới để bắt đầu.</p>
             </div>
         </main>
-        <footer class="text-center text-sm py-8" style="color: var(--color-text-secondary)">©2025 By PhanVinh2k6. All Right Reserved</footer>
+        <footer class="text-center text-sm py-8" style="color: var(--color-text-secondary)">© 2025 By PhanVinh2k6. All Rights Reserved</footer>
     </div>
     
     <!-- Stats Modal -->
